; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_direct3d.c_d3d_matrix_ortho.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_direct3d.c_d3d_matrix_ortho.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { float, float, float, float, float, float, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, float, float, float, float)* @d3d_matrix_ortho to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @d3d_matrix_ortho(%struct.TYPE_4__* %0, float %1, float %2, float %3, float %4) #0 {
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store float %1, float* %7, align 4
  store float %2, float* %8, align 4
  store float %3, float* %9, align 4
  store float %4, float* %10, align 4
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %12 = call i32 @d3d_matrix_identity(%struct.TYPE_4__* %11)
  %13 = load float, float* %8, align 4
  %14 = load float, float* %7, align 4
  %15 = fsub float %13, %14
  %16 = fdiv float 2.000000e+00, %15
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  store float %16, float* %18, align 8
  %19 = load float, float* %10, align 4
  %20 = load float, float* %9, align 4
  %21 = fsub float %19, %20
  %22 = fdiv float 2.000000e+00, %21
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 1
  store float %22, float* %24, align 4
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 2
  store float 1.000000e+00, float* %26, align 8
  %27 = load float, float* %8, align 4
  %28 = load float, float* %7, align 4
  %29 = fadd float %27, %28
  %30 = fneg float %29
  %31 = load float, float* %8, align 4
  %32 = load float, float* %7, align 4
  %33 = fsub float %31, %32
  %34 = fdiv float %30, %33
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 3
  store float %34, float* %36, align 4
  %37 = load float, float* %10, align 4
  %38 = load float, float* %9, align 4
  %39 = fadd float %37, %38
  %40 = fneg float %39
  %41 = load float, float* %10, align 4
  %42 = load float, float* %9, align 4
  %43 = fsub float %41, %42
  %44 = fdiv float %40, %43
  %45 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %46 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %45, i32 0, i32 4
  store float %44, float* %46, align 8
  %47 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %48 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %47, i32 0, i32 6
  store i64 0, i64* %48, align 8
  %49 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %50 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %49, i32 0, i32 5
  store float 1.000000e+00, float* %50, align 4
  ret void
}

declare dso_local i32 @d3d_matrix_identity(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
